# midicara

./: CMakeLists.txt  README.md  abstract.md  feed.cpp  shell.nix  synth_controller.md
